<resources>
    <string name="app_name">MviCleanDemo</string>
    <!--General-->
    <string name="sorry">Sorry</string>
    <string name="retry">Retry</string>
    <string name="unauthorized_error_message">Please logout and login again</string>
    <string name="network_error_message">Please make sure you are connected to the internet and try again</string>
    <string name="unknown_error_message">Something went wrong</string>
    <string name="phone_number_hint">01234567891</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="opps">Oops</string>
    <string name="general_error_message">Something went wrong</string>
    <string name="general_empty_message">We couldn\'t find anything</string>
    <string name="success">Success</string>
    <string name="loading">Loading</string>
    <string name="please_wait_while_loading">Please wait while loading…</string>

    <!--Login-->
    <string name="login">Login</string>
    <string name="login_description">Login using your email</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="enter_user_name">Enter the User Name</string>
    <string name="enter_password">Enter the Password</string>
    <string name="forgot_password_underlined"><u>Forgot Password?</u></string>
    <string name="signup_underlined"><u>Sign Up</u></string>
    <string name="invalid_password">Password should contain letters and numbers with min 6 and max 10 characters</string>

    <!--Signup-->
    <string name="skip_underlined"><u>Skip</u></string>
    <string name="login_underlined"><u>Login</u></string>
    <string name="signup">Sign Up</string>
    <string name="signup_description">Signup to our app</string>
    <string name="password_confirmation">Password Confirmation</string>

    <!--Home-->
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!--News Details-->
    <string name="news_details">Post Details</string>
    <string name="categories">Categories</string>
    <string name="news">News</string>
</resources>