<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsvLoginContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth_flow.presentation.view.AuthenticationActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvLogin"
            style="@style/bold_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/login"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLoginDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/login_description"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

        <TextView
            android:id="@+id/tvFamilyNameLabel"
            style="@style/regular_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="@string/user_name"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginDescription" />

        <com.jo.mvicleandemo.app_core.presentation.custom_views.BorderedEditText
            android:id="@+id/edtUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:singleLine="true"
            app:drawableStart="@drawable/ic_users"
            app:hint="@string/enter_user_name"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvFamilyNameLabel"
            app:maxLines="1"
            app:showClearButton="true"
            app:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvPasswordLabel"
            style="@style/regular_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/password"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

        <com.jo.mvicleandemo.app_core.presentation.custom_views.BorderedEditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true"
            app:drawableStart="@drawable/ic_password_primary"
            app:hint="@string/enter_password"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordLabel"
            app:maxLines="1"
            app:showClearButton="true"
            app:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvForgetPassword"
            style="@style/regular_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:paddingHorizontal="@dimen/_14sdp"
            android:text="@string/forgot_password_underlined"
            android:textAlignment="viewEnd"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />


        <Button
            android:id="@+id/btnLogin"
            style="@style/PositiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_14sdp"
            android:enabled="true"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/tvSignup"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart" />


        <TextView
            android:id="@+id/tvSignup"
            style="@style/regular_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:text="@string/signup_underlined"
            android:textAlignment="center"
            android:textColor="@color/color_secondary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

        <!--loading-->
        <include
            android:id="@+id/progressLoading"
            layout="@layout/view_full_screen_loading_transparent_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            tools:visibility="visible" />

        <!--error-->
        <include
            android:id="@+id/view_error"
            layout="@layout/view_error"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>