<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_rounded_white_bg_radius20"
    android:paddingBottom="@dimen/_20sdp"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnClose"
        style="?attr/selectableItemBackgroundBorderless"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@null"
        android:src="@drawable/ic_close_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_error_triangle"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/bold_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/color_primary_text"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/ivIcon"
        tools:text="@string/sorry"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/regular_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_4sdp"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_14sdp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_goneMarginTop="@dimen/_10sdp"
        tools:text="Error message goes here" />


    <Button
        android:id="@+id/btnPositiveAction"
        style="@style/PositiveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:enabled="true"
        android:text="@string/ok"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <Button
        android:id="@+id/btnNegativeAction"
        style="@style/NegativeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:enabled="true"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/btnPositiveAction" />


</androidx.constraintlayout.widget.ConstraintLayout>